<resources>
    <string name="app_name">Desafio3</string>

    <string name="login_header">Welcome to the Marvel HQ\'s</string>
    <string name="login_btn_login">LOG IN</string>
    <string name="login_btn_text_register">Create account</string>
    <string name="login_chk_text">Remember</string>
    <string name="lr_email">Email</string>
    <string name="lr_password">Password</string>

    <string name="register_name">Name</string>
    <string name="register_title">Register</string>
    <string name="register_btn_save">SAVE</string>

    <string name="cover_title">#%1$s</string>

    <string name="hq_published"><![CDATA[<b>Published</b>]]>: %1$s</string>
    <string name="hq_price"><![CDATA[<b>Price</b>]]>: $ %1$s</string>
    <string name="hq_pages"><![CDATA[<b>Pages</b>]]>: %1$s</string>

</resources>